--- a/client/stylesheets/master.css
+++ b/client/stylesheets/master.css
@@ -103,7 +103,11 @@ h4 {
 }
 
 .login-group {
-  margin-bottom: 1%;
+  padding-bottom: 1%;
+}
+
+.damRep-table {
+  margin-top: 8%;
 }
 
 #confirm-body {
