--- a/client/views/dash.html
+++ b/client/views/dash.html
@@ -1,11 +1,10 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='#/dash' class='brand-logo'>FleetKeep</a>
     <ul class='right'>
       <li>
-        <a href='#'>Settings</a>
+        <a class='nav-link' href='#'>Settings</a>
       </li>
-      <li ng-click='ctrl.logout()'>
+      <li class='nav-link' ng-click='ctrl.logout()'>
         <a href='#'>Logout</a>
       </li>
     </ul>
@@ -14,16 +13,73 @@
 <div class='row'>
   <h4 class='col s6 offset-s4'>Supervisor Dashboard</h4>
 </div>
+<div class='row charts'>
+  <highchart id="status-pie" class='col s4 offset-s1' config="ctrl.pieConfig"></highchart>
+  <highchart id="damage-bar" class='col s4 offset-s1' config="ctrl.barConfig"></highchart>
+</div>
+<div class='row'>
+  <h5 class='col s6 offset-s1'>Vehicles Out of Service</h5>
+  <div class='form-group'>
+    <p class='col s1 offset-s1'>View By:</p>
+  </div>
+  <select class="browser-default col s2" ng-model='ctrl.selectionOut'>
+    <option value="" disabled selected>Choose your option</option>
+    <option value='driver_id'>Driver ID</option>
+    <option value='truck_id'>Truck ID</option>
+    <option value='status'>Status</option>
+    <option value='created_at'>Date of Report</option>
+  </select>
+</div>
+<div class='row'>
+  <table class='col s10 offset-s1 highlight bordered oos-table'>
+    <thead>
+      <th>
+        Vehicle ID
+      </th>
+      <th>
+        Driver
+      </th>
+      <th>
+        Damage
+      </th>
+      <th>
+        Date
+      </th>
+      <th>
+        Status
+      </th>
+    </thead>
+    <tbody>
+      <tr ng-repeat='out in ctrl.out | orderBy: ctrl.selectionOut || status:true'>
+        <td>
+          {{out.truck_id}}
+        </td>
+        <td>
+          {{out.driver_id}}
+        </td>
+        <td>
+          {{out.desc}}
+        </td>
+        <td>
+          {{out.created_at | date : format : short }}
+        </td>
+        <td>
+          {{out.status}}
+        </td>
+        <td>
+          <a href='#/review/{{report.id}}' class='btn-floating waves-effect waves-light red'><i class='material-icons'>assignment</i></button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
 <div class='row'>
   <a href='/#/report'><button class="waves-effect waves-light btn-large col s2 offset-s5">New Report</button></a>
 </div>
 <p>
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
-<div class='row charts'>
-  <highchart id="status-pie" class='col s4 offset-s1' config="ctrl.pieConfig"></highchart>
-  <highchart id="damage-bar" class='col s4 offset-s1' config="ctrl.barConfig"></highchart>
-</div>
 <!-- <div class='row'>
   <highchart id="status-line" class='col s6' config="ctrl.lineConfig"></highchart>
 </div> -->
@@ -88,62 +144,6 @@
         </td>
         <td>
           {{report.status}}
-        </td>
-        <td>
-          <a href='#/review/{{report.id}}' class='btn-floating waves-effect waves-light blue'><i class='material-icons'>assignment</i></button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<div class='row'>
-  <h5 class='col s6 offset-s1'>Vehicles Out of Service</h5>
-  <div class='form-group'>
-    <p class='col s1 offset-s1'>View By:</p>
-  </div>
-  <select class="browser-default col s2" ng-model='ctrl.selectionOut'>
-    <option value="" disabled selected>Choose your option</option>
-    <option value='driver_id'>Driver ID</option>
-    <option value='truck_id'>Truck ID</option>
-    <option value='status'>Status</option>
-    <option value='created_at'>Date of Report</option>
-  </select>
-</div>
-<div class='row'>
-  <table class='col s10 offset-s1 highlight bordered oos-table'>
-    <thead>
-      <th>
-        Vehicle ID
-      </th>
-      <th>
-        Driver
-      </th>
-      <th>
-        Damage
-      </th>
-      <th>
-        Date
-      </th>
-      <th>
-        Status
-      </th>
-    </thead>
-    <tbody>
-      <tr ng-repeat='out in ctrl.out | orderBy: ctrl.selectionOut || status:true'>
-        <td>
-          {{out.truck_id}}
-        </td>
-        <td>
-          {{out.driver_id}}
-        </td>
-        <td>
-          {{out.desc}}
-        </td>
-        <td>
-          {{out.created_at | date : format : short }}
-        </td>
-        <td>
-          {{out.status}}
         </td>
         <td>
           <a href='#/review/{{report.id}}' class='btn-floating waves-effect waves-light blue'><i class='material-icons'>assignment</i></button>
