--- a/client/stylesheets/master.css
+++ b/client/stylesheets/master.css
@@ -119,6 +119,11 @@ h4 {
   background-color: RGBA(255, 255, 255, 1);
 }
 
+.review-form {
+  padding-top: 2%;
+  border-top: 1px solid black;
+}
+
 #confirm-body {
   background-color: white;
   width: 75%;
