--- a/client/stylesheets/master.css
+++ b/client/stylesheets/master.css
@@ -124,18 +124,43 @@ h4 {
   border-top: 1px solid black;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-body {
+  padding: 2px 16px;
+}
+
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
 #confirm-body {
   background-color: white;
   width: 75%;
   margin-left: 12.5%;
   padding-bottom: 1%;
   margin-top: 1%;
-}
-
-#damage-report {
-  border: 1px solid black;
-  border-radius: 2px;
-  padding: 1%;
 }
 
 #sign-here {
@@ -156,3 +181,13 @@ h4 {
     top: 0;
   }
 }*/
+
+@-webkit-keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
+
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+}
