Insert driver name into review form

--- a/client/views/review.html
+++ b/client/views/review.html
@@ -20,7 +20,7 @@
   </div>
   <div class='row'>
     <p class='col s4 offset-s1'><strong>Date Damage Reported:</strong> {{ctrl.report.created_at | date : format: short}}</p>
-    <p class='col s3'><strong>Damage Reported By Driver:</strong> {{ctrl.report.driver_id}}</p>
+    <p class='col s3'><strong>Damage Reported By Driver:</strong> {{ctrl.driver}}</p>
     <p class='col s3'><strong>Truck Damaged:</strong> {{ctrl.report.truck_id}}</p>
   </div>
   <div class='row'>
