--- a/client/stylesheets/master.css
+++ b/client/stylesheets/master.css
@@ -11,6 +11,10 @@ h4 {
   font-family: 'Quicksand', sans-serif;
 }
 
+.lg-btn {
+  color: RGBA(100, 34, 20, .8);
+}
+
 .brand-logo {
   font-family: 'Quicksand', sans-serif;
 }
@@ -110,12 +114,17 @@ h4 {
   margin-top: 8%;
 }
 
+.charts {
+  margin-top: 2%;
+}
+
 .oos-table {
   background-color: RGBA(255, 255, 255, 1);
 }
 
 .sup-table1 {
   background-color: RGBA(255, 255, 255, 1);
+  margin-bottom: 3%;
 }
 
 .review-form {
