--- a/client/views/dash.html
+++ b/client/views/dash.html
@@ -1,23 +1,26 @@
 <nav>
   <div class='nav-wrapper'>
     <ul class='right'>
-      <li>
-        <a class='nav-link' href='#'>Settings</a>
+      <li class='nav-link'>
+        <a href='#'>Out of Service Trucks</a>
+      </li>
+      <li class='nav-link'>
+        <a href='#'>Reported Damages</a>
       </li>
       <li class='nav-link' ng-click='ctrl.logout()'>
-        <a href='#'>Logout</a>
+        <a class='lg-btn' href='#'>Logout</a>
       </li>
     </ul>
   </div>
 </nav>
-<div class='row'>
-  <h4 class='col s6 offset-s4'>Supervisor Dashboard</h4>
+<div class='row' name='new-report'>
+  <a href='/#/report'><button class="waves-effect waves-light btn-large col s2 offset-s5">New Report</button></a>
 </div>
 <div class='row charts'>
-  <highchart id="status-pie" class='col s4 offset-s1' config="ctrl.pieConfig"></highchart>
-  <highchart id="damage-bar" class='col s4 offset-s1' config="ctrl.barConfig"></highchart>
+  <highchart id="status-pie" class='col s5 offset-s1' config="ctrl.pieConfig"></highchart>
+  <highchart id="damage-bar" class='col s5' config="ctrl.barConfig"></highchart>
 </div>
-<div class='row'>
+<div class='row' name='oos'>
   <h5 class='col s6 offset-s1'>Vehicles Out of Service</h5>
   <div class='form-group'>
     <p class='col s1 offset-s1'>View By:</p>
@@ -73,17 +76,10 @@
     </tbody>
   </table>
 </div>
-
-<div class='row'>
-  <a href='/#/report'><button class="waves-effect waves-light btn-large col s2 offset-s5">New Report</button></a>
-</div>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</p>
 <!-- <div class='row'>
   <highchart id="status-line" class='col s6' config="ctrl.lineConfig"></highchart>
 </div> -->
-<div class='row damRep-table'>
+<div class='row damRep-table' id='dam-table'>
   <h5 class='col s4 offset-s1'>Vehicles with Current Damage Reports</h5>
   <div class='form-group'>
     <label class='col s1' for='select'>View By:</label>
