Use html2canvas to render confirm page

--- a/client/views/dash.html
+++ b/client/views/dash.html
@@ -13,8 +13,8 @@
     </ul>
   </div>
 </nav>
-<div class='row' name='new-report'>
-  <a href='/#/report'><button class="waves-effect waves-light btn-large col s2 offset-s5">New Report</button></a>
+<div class='row'>
+  <a href='/#/report'><button class="waves-effect waves-light btn-large col s2 offset-s5" id='new-report'>New Report</button></a>
 </div>
 <div class='row charts'>
   <highchart id="status-pie" class='col s5 offset-s1' config="ctrl.pieConfig"></highchart>
