--- a/client/views/report.html
+++ b/client/views/report.html
@@ -1,6 +1,6 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='#/driver' class='brand-logo'>FleetKeep</a>
+    <a href='#/driver' class='brand-logo'><img class='logo' src='../images/Fleetkeep-logo.png' /></a>
     <ul class='right'>
       <li>
         <a href='#'>Settings</a>
@@ -11,7 +11,9 @@
     </ul>
   </div>
 </nav>
-<h3>New Report</h3>
+<div class='row'>
+  <h3 class='col s6 offset-s4'>New Report</h3>
+</div>
 <form class='container'>
   <div class='row form-group'>
     <label class='col s4 offset-s3'>Truck Number</label>
@@ -210,7 +212,6 @@
 </div>
 <div id="repModal" class="modal">
   <div class="modal-content">
-    <span class="close">x</span>
     <p>Damage Report</p>
     <div class='modal-body'>
       <div>
