--- a/client/views/driver.html
+++ b/client/views/driver.html
@@ -1,6 +1,6 @@
 <nav>
   <div class='nav-wrapper'>
-    <a href='#/driver' class='brand-logo'>FleetKeep</a>
+    <a href='#/driver' class='brand-logo'><img class='logo' src='../images/Fleetkeep-logo.png' /></a>
     <ul class='right'>
       <li>
         <a href='#'>Settings</a>
@@ -17,7 +17,7 @@
   <p class='col s6 offset-s3'>For more information on how to complete a pre-trip inspection, please see below</p>
 </div>
 <div class='row'>
-  <a href='/#/report'><button id='new-report' class="waves-effect waves-light btn-large col s2 offset-s5">Pre-Trip Inspection</button></a>
+  <a href='/#/report'><button id='new-report' class="waves-effect waves-light btn-large col s3 offset-s4">New Pre-Trip Inspection</button></a>
 </div>
 <div class='row'>
   <div class='row' id='oos-driver'>
