--- a/client/stylesheets/master.css
+++ b/client/stylesheets/master.css
@@ -67,11 +67,10 @@ h3, h4, h5{
   font-family: 'Quicksand', sans-serif;
   font-size: 2.2em;
   color: RGBA(255, 255, 255, .8);
+  background-color: RGBA(255, 255, 255, 0);
   margin-top: 1%;
-  border: solid 1px RGBA(255, 255, 255, .8);
-  border-radius: 3px;
-  background-color: RGBA(4, 15, 29, .9);
   padding: 1%;
+  border: none;
 }
 
 .flow-text {
@@ -104,7 +103,7 @@ h3, h4, h5{
 }
 
 .login-form {
-  padding-top: 2%;
+  padding-top: 1%;
   background-color: RGBA(246, 246, 246, .9);
   width: 50%;
   padding-bottom: 1%;
@@ -112,7 +111,7 @@ h3, h4, h5{
 }
 
 .login-group {
-  padding-bottom: 1%;
+  margin-bottom: 2%;
 }
 
 .damRep-table {
